# tap-wordpress-org

./: .gitignore  .pre-commit-config.yaml  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  config.sample.json  meltano.yml  pyproject.toml  setup.py  test_tap.py  tox.ini
.github/workflows/: test.yml
tap_wordpress_org/: __init__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_streams.py  test_tap.py
