[tool.poetry]
name = "tap-wordpress-org"
version = "0.1.0"
description = "Singer tap for WordPress.org, built with the Meltano SDK for Singer Taps."
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/your-org/tap-wordpress-org"
repository = "https://github.com/your-org/tap-wordpress-org"
documentation = "https://github.com/your-org/tap-wordpress-org#readme"
keywords = ["meltano", "singer", "tap", "wordpress", "api"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "tap_wordpress_org"}]

[tool.poetry.dependencies]
python = ">=3.9"
singer-sdk = "~=0.47.0"
requests = "~=2.31"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"
isort = "^5.13.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
tox = "^4.11.4"
codecov = "^2.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tap-wordpress-org = "tap_wordpress_org.tap:TapWordPressOrg.cli"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true